# matrix-identity-admin

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  audit.toml  building_guide.md  docker-compose.yml  vision.md
.flox/: env.json
.flox/env/: manifest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  codex-review-open-issues.yml  e2e.yml  release.yml  security.yml
.zap/: rules.tsv
docs/plans/: 2026-03-09-dynamic-policy-engine-design.md  2026-03-09-dynamic-policy-engine-plan.md  2026-03-09-e2e-full-stack-design.md  2026-03-09-phase2-finish-design.md  2026-03-09-phase2-finish-plan.md  2026-03-09-policy-ui-dynamic-dropdowns-design.md  2026-03-09-policy-ui-dynamic-dropdowns-plan.md  2026-03-09-space-support-design.md  2026-03-09-space-support-plan.md  2026-03-11-admin-dashboards-design.md  2026-03-11-admin-dashboards-plan.md  2026-03-11-coverage-and-fuzzing-design.md  2026-03-11-coverage-and-fuzzing-plan.md  2026-03-11-user-detail-polish-design.md  2026-03-12-release-pattern-design.md  2026-03-12-release-pattern-plan.md  2026-03-12-ux-polish-design.md  2026-03-12-ux-polish-plan.md
e2e/: .env  README.md  docker-compose.yml  e2e.test.signing.key  homeserver.yaml  keycloak-realm.json  mas.yaml  provision-admin-token.sh
maubot-invite/: base-config.yaml  build.sh  invite-bot.mbp  maubot.yaml
maubot-invite/invite_bot/: __init__.py
migrations/: 0001_audit_logs.sql  0002_policy_bindings.sql
src/: config.rs  error.rs  lib.rs  main.rs  state.rs  test_helpers.rs  utils.rs
src/auth/: csrf.rs  mod.rs  oidc.rs  session.rs
src/clients/: identity_provider.rs  keycloak.rs  mas.rs  mod.rs  room_management.rs  synapse.rs
src/db/: audit.rs  mod.rs  policy.rs
src/handlers/: audit.rs  auth.rs  bulk_reconcile.rs  dashboard.rs  delete.rs  devices.rs  disable.rs  invite.rs  mod.rs  offboard.rs  policy.rs  reactivate.rs  reconcile.rs  sessions.rs  templates.rs  users.rs
src/models/: audit.rs  group_mapping.rs  keycloak.rs  mas.rs  mod.rs  onboarding_template.rs  policy.rs  synapse.rs  (+3 more)
static/: app.css
templates/: audit.html  base.html  bulk_reconcile_result.html  dashboard.html  error.html  login.html  policy.html  reconcile_preview.html  status_card.html  templates.html  user_detail.html  users_search.html
tests/: e2e.rs
(+12 files in other folders)
