[package]
name = "matrix-identity-admin"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie-private"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "timeout"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# OIDC authentication
openidconnect = { version = "3", features = ["reqwest"] }

# Templates
askama = "0.12"
askama_axum = "0.4"

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
dotenvy = "0.15"
rand = "0.9"
base64 = "0.22"
cookie = "0.18"
sha2 = "0.10"

[dev-dependencies]
http-body-util = "0.1"
